// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`checker diagnostics imports and module instances reports noncanonical named and wildcard imports and exports 1`] = `
"test/fixtures/imports-exports.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Consumer {
  | ^^^^^^
  |
test/fixtures/imports-exports.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 |  import   Library
  | ^
  |
test/fixtures/imports-exports.qnt:5:8: error[format/declaration-keyword-spacing]: expected one space after 'import'
  |
5 |  import   Library
  |        ^^^
  |
test/fixtures/imports-exports.qnt:6:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
6 |  import Library  as   Lib
  | ^
  |
test/fixtures/imports-exports.qnt:6:18: error[format/import-alias-spacing]: expected one space around 'as'
  |
6 |  import Library  as   Lib
  |                  ^^
  |
test/fixtures/imports-exports.qnt:7:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
7 |  import Library . value
  | ^
  |
test/fixtures/imports-exports.qnt:7:17: error[format/import-selector-spacing]: expected no space around '.'
  |
7 |  import Library . value
  |                 ^
  |
test/fixtures/imports-exports.qnt:8:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
8 |  import Library . *
  | ^
  |
test/fixtures/imports-exports.qnt:8:17: error[format/import-selector-spacing]: expected no space around '.'
  |
8 |  import Library . *
  |                 ^
  |
test/fixtures/imports-exports.qnt:9:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
9 |  export  Library
  | ^
  |
test/fixtures/imports-exports.qnt:9:8: error[format/declaration-keyword-spacing]: expected one space after 'export'
  |
9 |  export  Library
  |        ^^
  |
test/fixtures/imports-exports.qnt:10:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
10 |  export Library  as   Public
   | ^
   |
test/fixtures/imports-exports.qnt:10:18: error[format/import-alias-spacing]: expected one space around 'as'
   |
10 |  export Library  as   Public
   |                  ^^
   |
test/fixtures/imports-exports.qnt:11:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
11 |  export Library . value
   | ^
   |
test/fixtures/imports-exports.qnt:11:17: error[format/import-selector-spacing]: expected no space around '.'
   |
11 |  export Library . value
   |                 ^
   |
test/fixtures/imports-exports.qnt:12:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
12 |  export Library . *
   | ^
   |
test/fixtures/imports-exports.qnt:12:17: error[format/import-selector-spacing]: expected no space around '.'
   |
12 |  export Library . *
   |                 ^
   |
"
`;

exports[`checker diagnostics imports and module instances reports noncanonical source-qualified imports 1`] = `
"test/fixtures/source-imports.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 |  import Library   from   "./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:2:19: error[format/import-source-spacing]: expected one space around 'from'
  |
2 |  import Library   from   "./quint-format-source-library"
  |                   ^^^^
  |
test/fixtures/source-imports.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 |  import Library . value from"./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:3:17: error[format/import-selector-spacing]: expected no space around '.'
  |
3 |  import Library . value from"./quint-format-source-library"
  |                 ^
  |
test/fixtures/source-imports.qnt:3:25: error[format/import-source-spacing]: expected one space around 'from'
  |
3 |  import Library . value from"./quint-format-source-library"
  |                         ^^^^
  |
test/fixtures/source-imports.qnt:4:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
4 |  import Library . *  from  "./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:4:17: error[format/import-selector-spacing]: expected no space around '.'
  |
4 |  import Library . *  from  "./quint-format-source-library"
  |                 ^
  |
test/fixtures/source-imports.qnt:4:22: error[format/import-source-spacing]: expected one space around 'from'
  |
4 |  import Library . *  from  "./quint-format-source-library"
  |                      ^^^^
  |
"
`;

exports[`checker diagnostics imports and module instances reports noncanonical module instances and overrides 1`] = `
"test/fixtures/module-instance.qnt:5:1: error[format/module-separation]: expected one blank line between modules
  |
5 | module Example {
  | ^^^^^^
  |
test/fixtures/module-instance.qnt:6:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  | ^
  |
test/fixtures/module-instance.qnt:6:17: error[format/instance-delimiter-spacing]: expected no space around instance parentheses
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                 ^
  |
test/fixtures/module-instance.qnt:6:20: error[format/instance-override-spacing]: expected one space around '='
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                    ^
  |
test/fixtures/module-instance.qnt:6:23: error[format/instance-override-separator-spacing]: expected ', ' between instance overrides
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                       ^
  |
test/fixtures/module-instance.qnt:6:28: error[format/instance-override-spacing]: expected one space around '='
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                            ^
  |
test/fixtures/module-instance.qnt:6:33: error[format/instance-trailing-comma]: trailing commas are omitted from inline instances
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                                 ^
  |
test/fixtures/module-instance.qnt:6:38: error[format/import-alias-spacing]: expected one space around 'as'
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                                      ^^
  |
"
`;

exports[`checker diagnostics imports and module instances reports noncanonical instance-override comment formatting 1`] = `
"test/fixtures/instance-override-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Library{
  |               ^
  |
test/fixtures/instance-override-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | const N:int
  | ^
  |
test/fixtures/instance-override-comment.qnt:2:9: error[format/type-colon-spacing]: expected one space after ':'
  |
2 | const N:int
  |         ^
  |
test/fixtures/instance-override-comment.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Example{
  | ^^^^^^
  |
test/fixtures/instance-override-comment.qnt:4:15: error[format/module-brace-spacing]: expected one space before '{'
  |
4 | module Example{
  |               ^
  |
test/fixtures/instance-override-comment.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | import Library(
  | ^
  |
test/fixtures/instance-override-comment.qnt:5:15: error[format/instance-delimiter-spacing]: expected expanded instance overrides with two-space indentation
  |
5 | import Library(
  |               ^
  |
test/fixtures/instance-override-comment.qnt:7:2: error[format/instance-override-spacing]: expected one space around '='
  |
7 | N=1
  |  ^
  |
test/fixtures/instance-override-comment.qnt:8:2: error[format/import-alias-spacing]: expected one space around 'as'
  |
8 | )as Lib
  |  ^^
  |
"
`;

exports[`checker diagnostics imports and module instances reports noncanonical anonymous instances 1`] = `
"test/fixtures/anonymous-instance.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Example {
  | ^^^^^^
  |
test/fixtures/anonymous-instance.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 |  import Library ( N=1, ) . *
  | ^
  |
test/fixtures/anonymous-instance.qnt:5:17: error[format/instance-delimiter-spacing]: expected no space around instance parentheses
  |
5 |  import Library ( N=1, ) . *
  |                 ^
  |
test/fixtures/anonymous-instance.qnt:5:20: error[format/instance-override-spacing]: expected one space around '='
  |
5 |  import Library ( N=1, ) . *
  |                    ^
  |
test/fixtures/anonymous-instance.qnt:5:22: error[format/instance-trailing-comma]: trailing commas are omitted from inline instances
  |
5 |  import Library ( N=1, ) . *
  |                      ^
  |
test/fixtures/anonymous-instance.qnt:5:26: error[format/import-selector-spacing]: expected no space around '.'
  |
5 |  import Library ( N=1, ) . *
  |                          ^
  |
"
`;

exports[`checker diagnostics imports and module instances reports noncanonical anonymous-instance comment formatting 1`] = `
"test/fixtures/anonymous-instance-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Library{
  |               ^
  |
test/fixtures/anonymous-instance-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | const N:int
  | ^
  |
test/fixtures/anonymous-instance-comment.qnt:2:9: error[format/type-colon-spacing]: expected one space after ':'
  |
2 | const N:int
  |         ^
  |
test/fixtures/anonymous-instance-comment.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Example{
  | ^^^^^^
  |
test/fixtures/anonymous-instance-comment.qnt:4:15: error[format/module-brace-spacing]: expected one space before '{'
  |
4 | module Example{
  |               ^
  |
test/fixtures/anonymous-instance-comment.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | import Library(
  | ^
  |
test/fixtures/anonymous-instance-comment.qnt:5:15: error[format/instance-delimiter-spacing]: expected expanded instance overrides with two-space indentation
  |
5 | import Library(
  |               ^
  |
test/fixtures/anonymous-instance-comment.qnt:7:2: error[format/instance-override-spacing]: expected one space around '='
  |
7 | N=1
  |  ^
  |
"
`;
